C2 SuperWord: Fix compilation time regression in dependency graph traversal after JDK-8325651

XMLWordPrintable

    • b18

      Old title: TestAlignVectorFuzzer.java still times out

      We are still seeing timeouts, even after JDK-8323641.


      100719 404 b compiler.loopopts.superword.TestAlignVectorFuzzer::testUUBBBH (1253 bytes)
      Timeout signalled after 480 seconds
      618487 407 !b compiler.loopopts.superword.TestAlignVectorFuzzer::init_con (17 bytes)
      618490 408 !b compiler.loopopts.superword.TestAlignVectorFuzzer::init_is_con (17 bytes)
      618494 409 !b compiler.loopopts.superword.TestAlignVectorFuzzer::limit_con (17 bytes)
      618497 410 !b compiler.loopopts.superword.TestAlignVectorFuzzer::limit_is_con (17 bytes)
      [629.271s][error][attach] could not open (2) pipe \\\\.\\pipe\\javatool-1552093071 to send result of operation jcmd
      [629.271s][error][attach] could not open (2) pipe \\\\.\\pipe\\javatool-239550605 to send result of operation jcmd
      [629.272s][error][attach] could not open (2) pipe \\\\.\\pipe\\javatool-313065970 to send result of operation jcmd
      [629.273s][error][attach] could not open (2) pipe \\\\.\\pipe\\javatool-1475138679 to send result of operation jcmd
      TEST PASSED: hit maximal time allownance during iteration 3, time allowance: -455947, until timeout: -147947
      ----------System.err:(1/16)----------
      STATUS:Passed.

      [...]

      test result: Error. Program `c:\ade\mesos\work_dir\jib-master\install\jdk-23+14-1032\windows-x64-debug.jdk\jdk-23\fastdebug\bin\java' timed out (timeout set to 480000ms, elapsed time including timeout handling was 639451ms).

            Assignee:
            Emanuel Peter
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: